@@ -1,5 +1,6 @@
 Changes for 1.8.2
 
+ - [ZBX-2067] fixed undefined variable errors in actions screen (Aly)
  - [ZBX-2053] fixed evaluating of case sensitivity on the server/agent side of regular expressions (Dmitry)
  - [ZBX-2077] added support of Failure/Success Audit eventlog severity (Sasha)
  - [ZBXNEXT-257] added support of time-based disabling of data collection for items (asaveljevs,Aly,Sasha)
